data/derived/fa15/progs/unify/prog0464.ml.out
Characters 185-186:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         int * int -> 'a -> int * (int list -> int list)
       but an expression was expected of type int * int -> 'a -> int * int
       Type int list -> int list is not compatible with type int 
